syntax = "proto3";

package storage;
option go_package = "github.com/pachyderm/pachyderm/src/server/pkg/storage";

// DataRef is a reference to a chunk of data.
message DataRef {
  string id = 1;
  int64 offset = 2;
}

// Op is the set of operations that can be associated with a chunk of data.
enum Op {
  APPEND = 0;
  OVERWRITE = 1;
  DELETE = 2;
}

// DataOp is a chunk of data and an operation associated with that chunk.
message DataOp {
  DataRef dataRef = 1;
  Op op = 2;
}
